js/src/tests/test262/built-ins/NativeErrors/SyntaxError/length.js
assert
.
sameValue
(
SyntaxError
.
length
1
)
;
verifyNotEnumerable
(
SyntaxError
"
length
"
)
;
verifyNotWritable
(
SyntaxError
"
length
"
)
;
verifyConfigurable
(
SyntaxError
"
length
"
)
;
reportCompare
(
0
0
)
;
